--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,8 @@
+[package]
+name = gtk+
+url = https://download.gnome.org/sources/gtk+/2.24/gtk+-2.24.31.tar.xz
+archives = 
+
 [autospec]
 # build 32 bit libraries
 32bit = true
