--- a/options.conf
+++ b/options.conf
@@ -2,6 +2,7 @@
 name = gtk+
 url = https://download.gnome.org/sources/gtk+/2.24/gtk+-2.24.31.tar.xz
 archives = 
+giturl = https://github.com/GNOME/gtk.git
 
 [autospec]
 # build 32 bit libraries
